syntax = "proto3";

package yandex.cloud.datatransfer.v1.endpoint;

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/datatransfer/v1/endpoint;endpoint";
option java_package = "yandex.cloud.api.datatransfer.v1.endpoint";
option csharp_namespace = "Yandex.Cloud.Datatransfer.V1.EndPoint"; // there is a clash with class Endpoint in namespace Yandex.Cloud.Datatransfer.V1

import "google/protobuf/empty.proto";
import "yandex/cloud/datatransfer/v1/endpoint/common.proto";

enum ClickhouseCleanupPolicy {
    CLICKHOUSE_CLEANUP_POLICY_UNSPECIFIED = 0;
    CLICKHOUSE_CLEANUP_POLICY_DISABLED = 1;
    CLICKHOUSE_CLEANUP_POLICY_DROP = 2;
    CLICKHOUSE_CLEANUP_POLICY_TRUNCATE = 3;
}
message ClickhouseShard {
    string name = 1;
    repeated string hosts = 2;
}
message OnPremiseClickhouse {
    reserved 2, 5 to 7;
    repeated ClickhouseShard shards = 1;
    int64 http_port = 3;
    int64 native_port = 4;
    TLSMode tls_mode = 8;
}
message ClickhouseConnectionOptions {
    reserved 1, 3 to 4;
    oneof address {
        string mdb_cluster_id = 5;
        OnPremiseClickhouse on_premise = 2;
    }
    string user = 6;
    Secret password = 7;
    // Database
    string database = 8;
}
message ClickhouseConnection {
    oneof connection {
        ClickhouseConnectionOptions connection_options = 1;
    }
}
message ClickhouseSharding {
    message ColumnValueHash {
        string column_name = 1;
    }
    message ColumnValueMapping {
        message ValueToShard {
            ColumnValue column_value = 1;
            string shard_name = 2;
        }
        string column_name = 1;
        repeated ValueToShard mapping = 2;
    }
    oneof sharding {
        ColumnValueHash column_value_hash = 1;
        ColumnValueMapping custom_mapping = 2;
        google.protobuf.Empty transfer_id = 3;
        google.protobuf.Empty round_robin = 4;
    }
}
message ClickhouseSource {
    reserved 2 to 6;
    ClickhouseConnection connection = 1;
    // While list of tables for replication. If none or empty list is presented - will
    // replicate all tables. Can contain * patterns.
    repeated string include_tables = 7;
    // Exclude list of tables for replication. If none or empty list is presented -
    // will replicate all tables. Can contain * patterns.
    repeated string exclude_tables = 8;
    string subnet_id = 9;
    repeated string security_groups = 10;
}
message ClickhouseTarget {
    reserved 1, 3 to 11, 13 to 16, 18 to 20, 23 to 49;
    ClickhouseConnection connection = 2;
    string subnet_id = 12;
    // Alternative table names in target
    repeated AltName alt_names = 17;
    ClickhouseCleanupPolicy cleanup_policy = 21;
    ClickhouseSharding sharding = 22;
    string clickhouse_cluster_name = 50;
    repeated string security_groups = 51;
}
